<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextAppearance="@style/CustomTabText"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <include layout="@layout/content" />

    <View
        android:id="@+id/fabBGLayout"
        android:background="@color/colorDrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/favorite_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/s_23"
        android:padding="@dimen/s_12"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/s_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/text_label"
            android:textColor="@android:color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_favorite_white_24dp"
            app:fabSize="mini"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/s_12"
        android:clipToPadding="false"
        android:layout_marginEnd="@dimen/s_23"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/s_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/text_label"
            android:textColor="@android:color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_add_alarm"
            app:fabSize="mini"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/language_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/s_12"
        android:clipToPadding="false"
        android:layout_marginEnd="@dimen/s_23"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/s_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/text_label"
            android:textColor="@android:color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_language"
            android:tint="@android:color/white"
            app:fabSize="mini"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:clipToPadding="false"
        android:padding="@dimen/s_12"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_gravity="bottom|end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/ic_add"
            app:fabSize="normal"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>